--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8">
     <title>🐕 Redux boilerplate</title
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./dist/style.css">
   </head>
   <body>
     <div id="app"></div>
-    <script src='./bundle.js'></script>
+    <script src='./dist/bundle.js'></script>
   </body>
 </html>
