--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src='./dist/bundle.js'></script>
+    <script src='./dist/vendor.bundle.js'></script>
+    <script src='./dist/index.bundle.js'></script>
   </body>
 </html>
